--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type":"path",
+            "url":"package/wisnubaldas/ctos",
+            "options":{
+                "symlink":true
+            }
         }
     ],
     "require": {
@@ -19,7 +26,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "wisnubaldas/baldas-module":"@dev"
+        "wisnubaldas/baldas-module":"@dev",
+        "wisnubaldas/ctos":"@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
