--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "wisnubaldas/baldas-module":"@dev",
-        "wisnubaldas/ctos":"@dev"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -36,7 +34,9 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "wisnubaldas/baldas-module":"@dev",
+        "wisnubaldas/ctos":"@dev"
     },
     "autoload": {
         "psr-4": {
