--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "league/fractal": "^0.20.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
