--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "league/fractal": "^0.20.1",
-        "wisnubaldas/baldas-module":"@dev",
-        "wisnubaldas/ctos":"@dev"
+        "rap2hpoutre/laravel-log-viewer": "^2.3",
+        "wisnubaldas/baldas-module": "@dev",
+        "wisnubaldas/ctos": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
