--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "league/fractal": "^0.20.1",
+        "maatwebsite/excel": "^3.1",
         "rap2hpoutre/laravel-log-viewer": "^2.3",
         "wisnubaldas/baldas-module": "@dev"
     },
