--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -1,18 +1,18 @@
-name: App\Http\Controllers\api\Cont
+name: CloudStatusController
 description: |-
 
-  APIs for CloudStatusController
+  APIs for App\Http\Controllers\api\ContCloudStatusController
 endpoints:
   -
     httpMethods:
       - GET
     uri: api/cloud-status
     metadata:
-      groupName: App\Http\Controllers\api\Cont
+      groupName: CloudStatusController
       groupDescription: |-
 
-        APIs for CloudStatusController
-      subgroup: CloudStatusController
+        APIs for App\Http\Controllers\api\ContCloudStatusController
+      subgroup: ''
       subgroupDescription: ''
       title: 'Display a listing of the resource.'
       description: ''
@@ -49,11 +49,11 @@ endpoints:
       - POST
     uri: api/cloud-status
     metadata:
-      groupName: App\Http\Controllers\api\Cont
+      groupName: CloudStatusController
       groupDescription: |-
 
-        APIs for CloudStatusController
-      subgroup: CloudStatusController
+        APIs for App\Http\Controllers\api\ContCloudStatusController
+      subgroup: ''
       subgroupDescription: ''
       title: 'Store a newly created resource in storage.'
       description: ''
@@ -81,11 +81,11 @@ endpoints:
       - GET
     uri: 'api/cloud-status/{id}'
     metadata:
-      groupName: App\Http\Controllers\api\Cont
+      groupName: CloudStatusController
       groupDescription: |-
 
-        APIs for CloudStatusController
-      subgroup: CloudStatusController
+        APIs for App\Http\Controllers\api\ContCloudStatusController
+      subgroup: ''
       subgroupDescription: ''
       title: 'Display the specified resource.'
       description: ''
@@ -99,13 +99,13 @@ endpoints:
         name: id
         description: 'The ID of the cloud status.'
         required: true
-        example: sed
+        example: ad
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: sed
+      id: ad
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -133,11 +133,11 @@ endpoints:
       - PATCH
     uri: 'api/cloud-status/{id}'
     metadata:
-      groupName: App\Http\Controllers\api\Cont
+      groupName: CloudStatusController
       groupDescription: |-
 
-        APIs for CloudStatusController
-      subgroup: CloudStatusController
+        APIs for App\Http\Controllers\api\ContCloudStatusController
+      subgroup: ''
       subgroupDescription: ''
       title: 'Update the specified resource in storage.'
       description: ''
@@ -151,13 +151,13 @@ endpoints:
         name: id
         description: 'The ID of the cloud status.'
         required: true
-        example: aut
+        example: deleniti
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: aut
+      id: deleniti
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -175,11 +175,11 @@ endpoints:
       - DELETE
     uri: 'api/cloud-status/{id}'
     metadata:
-      groupName: App\Http\Controllers\api\Cont
+      groupName: CloudStatusController
       groupDescription: |-
 
-        APIs for CloudStatusController
-      subgroup: CloudStatusController
+        APIs for App\Http\Controllers\api\ContCloudStatusController
+      subgroup: ''
       subgroupDescription: ''
       title: 'Remove the specified resource from storage.'
       description: ''
@@ -193,13 +193,13 @@ endpoints:
         name: id
         description: 'The ID of the cloud status.'
         required: true
-        example: aperiam
+        example: odio
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: aperiam
+      id: odio
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
